Correct proxy name